Add support for forwarding maven coordinates in keep rule origin
This adds a new MavenOrigin interface. Clients can pass implementations of Origin that implements MavenOrigin to pass additional information about an input's maven origin.

By default, when using
R8Command.Builder.addProguardConfigurationFiles(List<Path>), R8 will
create a PathOrigin, which does not have any maven coordinates
associated with it.

To enable clients to pass a more detailed origin, this CL adds a new
method R8Command.Builder.addProguardConfigurationFile(Path, Origin).

Bug: b/447025000
Change-Id: I9568789725dd3ca98573a72a1ed5ea837482808f